--- a/user_config.pri.dist
+++ b/user_config.pri.dist
@@ -26,7 +26,7 @@
 # Add or remove custom message specs here. The matching mavlink headers are
 # included in the main qgroundcontrol.pro file.
 
-MAVLINK_CONF += pixhawk
+MAVLINK_CONF += ualberta
 
 # slugs \
 # ualberta
